<resources>
    <string name="app_name">News Feed</string>
    <string name="app_title">News Feed</string>
    <string name="app_database_name">localities_app.db</string>
    <string name="navigation_view_header_title">Your #1 News Partner</string>
    <string name="title_home">Latest Feed</string>
    <string name="search_news">Search</string>
    <string name="title_info">Info</string>
    <string name="settings_title">Settings</string>
    <string name="favourite">Bookmarks</string>
    <string name="no_liked_items">You Don\'t have bookmarks Yet..</string>
    <string name="poor_network_view_hint">Poor or No Network</string>
    <string name="loading_text">Loading News</string>
    <string name="news_categories">Categories</string>
    <string name="home_dashboard">Local News</string>
    <string name="notifications">Notifications</string>
    <string name="receive_preference">Receive notifications</string>
    <string name="choose_theme">Choose theme</string>
    <string name="main_theme">System default</string>
    <string name="about_app">ABOUT</string>
    <string name="about_app_site">App website</string>
    <string name="open_source_references">Open source licences</string>

    <string name="preference_theme_title">Theme</string>

    <string name="light_app_theme">Light theme</string>
    <string name="dark_app_theme">Dark theme</string>
    <string name="system_default_theme">System default</string>

    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="system_default_value" translatable="false">System</string>
    <string name="app_theme_key">app_theme_key</string>
</resources>
